5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_1326.log
== SUBMITION (2019-03-11 15:04:11) 
-- CODE:
printf(40 + 35 = 75)
-- EXECUTION TIME:
0.18021
-- ERROR:
  File "/home/codebench/codes/1573/1326/main.py", line 1
    printf(40 + 35 = 75)
          ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:04:27) 
-- CODE:
printf(40 + 35)
-- EXECUTION TIME:
0.137393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf(40 + 35)
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:04:39) 
-- CODE:
printf(40+35)
-- EXECUTION TIME:
0.140535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1326/main.py", line 1, in <module>
    printf(40+35)
NameError: name 'printf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:04:50) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.123106
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
